done but without css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Netflix</title>
-    <link rel="stylesheet" href="/assets/register.css">
+    <link rel="stylesheet" href="/assets/reg_password_created.css">
     <!-- <link rel="stylesheet" href="/index.css"> -->
 </head>
 
@@ -21,6 +21,12 @@
     <script src="./components/RegisterStepHeader/RegisterStepHeader.precompiled.js"></script>
     <script src="./components/RegisterContextBody/RegisterContextBody.precompiled.js"></script>
     <script src="./components/FinishAccContent/FinishAccContent.precompiled.js"></script>
+    <script src="./components/FormList/FormList.precompiled.js"></script>
+    <script src="./components/FormInput/FormInput.precompiled.js"></script>
+    <script src="./components/CreatePasswordContent/CreatePasswordContent.precompiled.js"></script>
+    <script src="./components/EmailPreferenceContainer/EmailPreferenceContainer.precompiled.js"></script>
+    <script src="./components/AlreadyCreatedPasswordContent/AlreadyCreatedPasswordContent.precompiled.js"></script>
+    <script src="./components/LinkForgotPassword/LinkForgotPassword.precompiled.js"></script>
 
     <script type="module" src="./index.js"></script>
 </body>
