--- a/pages/register_create_password.html
+++ b/pages/register_create_password.html
@@ -40,6 +40,9 @@
                         <div>
                             Еще несколько шагов, и все готово!
                         </div>
+                    </content-fragment>
+                    <content-fragment>
+
                         <div>
                             Мы тоже ненавидим бумажную волокиту.
                         </div>
