--- a/pages/register_if_account_alredy_created.html
+++ b/pages/register_if_account_alredy_created.html
@@ -38,9 +38,9 @@
                         </h1>
                     </content-fragment>
                     <content-fragment>
-                        <span>
+                        <div>
                             Введите свой пароль, и вы сразу же начнете просмотр.
-                        </span>
+                        </div>
                     </content-fragment>
                     <content-fragment>
                         <ul class="form-list">
