--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Netflix</title>
-    <link rel="stylesheet" href="/assets/reg_password_created.css">
-    <!-- <link rel="stylesheet" href="/index.css"> -->
+    <!-- <link rel="stylesheet" href="/assets/reg_password_created.css"> -->
+    <link rel="stylesheet" href="/index.css">
 </head>
 
 <body>
