--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
         <script src="/src/pages/login/components/body/body.precompiled.js"></script>
         <script src="/src/pages/login/components/header/header.precompiled.js"></script>
         <script src="/src/pages/login/components/footer/footer.precompiled.js"></script>
-
+        <script src="/src/pages/feed/components/content/feed-content-main.precompiled.js "></script>
         <script src="/src/pages/feed/components/header/header-feed.precompiled.js"></script>
+        <script src="/src/pages/feed/components/content/genre/genre.precompiled.js"></script>
+        <script src="/src/pages/feed/components/footer/footer-feed.precompiled.js"></script>
         <script type="module" src="./index.js"></script>
     </body>
 
