fix reg auth goToLink and more ...

--- a/index.html
+++ b/index.html
@@ -9,16 +9,50 @@
 
     <body>
         <div id="root"></div>
-        
+
         <script src="/handlebars/dist/handlebars.runtime.js"></script>
 
         <script src="/src/pages/login/components/body/body.precompiled.js"></script>
         <script src="/src/pages/login/components/header/header.precompiled.js"></script>
         <script src="/src/pages/login/components/footer/footer.precompiled.js"></script>
-        <script src="/src/pages/feed/components/content/feed-content-main.precompiled.js "></script>
-        <script src="/src/pages/feed/components/header/header-feed.precompiled.js"></script>
-        <script src="/src/pages/feed/components/content/genre/genre.precompiled.js"></script>
-        <script src="/src/pages/feed/components/footer/footer-feed.precompiled.js"></script>
+        <script
+            src="/src/pages/feed/components/content/feed-content-main.precompiled.js "></script>
+        <script
+            src="/src/pages/feed/components/header/header-feed.precompiled.js"></script>
+        <script
+            src="/src/pages/feed/components/content/genre/genre.precompiled.js"></script>
+        <script
+            src="/src/pages/feed/components/footer/footer-feed.precompiled.js"></script>
+        <script
+            src="/src/pages/register/components/AlreadyCreatedPasswordContent/AlreadyCreatedPasswordContent.precompiled.js"></script>
+        <script
+            src="/src/pages/register/components/CreatePasswordContent/CreatePasswordContent.precompiled.js"></script>
+        <script
+            src="/src/pages/register/components/EmailPreferenceContainer/EmailPreferenceContainer.precompiled.js"></script>
+        <script
+            src="/src/pages/register/components/FinishAccContent/FinishAccContent.precompiled.js"></script>
+        <script
+            src="/src/pages/register/components/FormInput/FormInput.precompiled.js"></script>
+        <script
+            src="/src/pages/register/components/FormList/FormList.precompiled.js"></script>
+        <script
+            src="/src/pages/register/components/Header/Header.precompiled.js"></script>
+        <script
+            src="/src/pages/register/components/LinkForgotPassword/LinkForgotPassword.precompiled.js"></script>
+        <script
+            src="/src/pages/register/components/NetflixLogo/NetflixLogo.precompiled.js"></script>
+        <script
+            src="/src/pages/register/components/RegFooter/RegFooter.precompiled.js"></script>
+        <script
+            src="/src/pages/register/components/RegisterContextBody/RegisterContextBody.precompiled.js"></script>
+        <script
+            src="/src/pages/register/components/RegisterStepHeader/RegisterStepHeader.precompiled.js"></script>
+        <script
+            src="/src/pages/register/components/SignInLink/SignInLink.precompiled.js"></script>
+        <script
+            src="/src/pages/register/components/SubmitRegisterButton/SubmitRegisterButton.precompiled.js"></script>
+
+        <script src="/src/pages/main/main-page.precompiled.js"></script>
         <script type="module" src="./index.js"></script>
     </body>
 
