--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Netflix</title>
         <link rel="stylesheet" href="./src/static/assets/style.css">
     </head>
@@ -34,7 +35,7 @@
         <script src="/dist/SignInLink.precompiled.js"></script>
         <script src="/dist/SubmitRegisterButton.precompiled.js"></script>
         <script src="/dist/main-page.precompiled.js"></script>
-        
+
         <script type="module" src="./index.js"></script>
     </body>
 
