--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
         <script src="dist/partial-footer.precompiled.js"></script>
         <script src="dist/main-background.precompiled.js"></script>
         <script src="dist/input-control.precompiled.js"></script>
+
         <script src="dist/main-form.precompiled.js"></script>
         <script src="dist/main-banner.precompiled.js"></script>
         <script src="dist/main-content.precompiled.js"></script>
+
+        <script src="dist/login-page.precompiled.js"></script>
+        <script src="dist/login-form.precompiled.js"></script>
+        <script src="dist/login-background.precompiled.js"></script>
 
         <script src="dist/header-login.precompiled.js"></script>
         <script src="dist/body.precompiled.js"></script>
