--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <script src="dist/partial-footer.precompiled.js"></script>
         <script src="dist/main-background.precompiled.js"></script>
         <script src="dist/input-control.precompiled.js"></script>
-
+        <script src="dist/feed-page.precompiled.js"></script>
+        <script src="dist/btn-action.precompiled.js"></script>
+        <script src="dist/feed-preview.precompiled.js"></script>
         <script src="dist/main-form.precompiled.js"></script>
         <script src="dist/main-banner.precompiled.js"></script>
         <script src="dist/main-content.precompiled.js"></script>
@@ -34,10 +36,7 @@
         <script src="dist/login-form.precompiled.js"></script>
         <script src="dist/login-background.precompiled.js"></script>
 
-        <script src="dist/feed-content-main.precompiled.js"></script>
-        <script src="dist/header-feed.precompiled.js"></script>
         <script src="dist/genre.precompiled.js"></script>
-        <script src="dist/footer-feed.precompiled.js"></script>
 
         <script src="dist/main-page.precompiled.js"></script>
         <script src="dist/404.precompiled.js"></script>
