--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <body>
         <div id="root"></div>
+        <div id="toasts"></div>
         <script src="/handlebars/dist/handlebars.runtime.js"></script>
 
         <script src="dist/start-register-form.precompiled.js"></script>
@@ -28,10 +29,10 @@
         <script src="dist/main-form.precompiled.js"></script>
         <script src="dist/main-banner.precompiled.js"></script>
         <script src="dist/main-content.precompiled.js"></script>
-
+        <script src="dist/notify.precompiled.js"></script>
         <script src="dist/main-register.precompiled.js"></script>
         <script src="dist/register-form.precompiled.js"></script>
-
+        <script src="dist/feed-collection.precompiled.js"></script>
         <script src="dist/login-page.precompiled.js"></script>
         <script src="dist/login-form.precompiled.js"></script>
         <script src="dist/login-background.precompiled.js"></script>
