--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
         <script src="dist/login-page.precompiled.js"></script>
         <script src="dist/login-form.precompiled.js"></script>
         <script src="dist/login-background.precompiled.js"></script>
-
+        <script src="dist/player.precompiled.js"></script>
         <script src="dist/genre.precompiled.js"></script>
-
         <script src="dist/main-page.precompiled.js"></script>
         <script src="dist/404.precompiled.js"></script>
-
+        <script src="dist/content.precompiled.js"></script>
+        
         <script type="module" src="./index.js"></script>
     </body>
 
