card size is the same

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <script src="dist/main-page.precompiled.js"></script>
         <script src="dist/404.precompiled.js"></script>
         <script src="dist/content.precompiled.js"></script>
-        
+        <script src="dist/video-item.precompiled.js"></script>
+        <script src="dist/cast.precompiled.js"></script>
+
         <script type="module" src="./index.js"></script>
     </body>
 
