--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Netflix</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/img/icon.png">
+    <title>Netflix</title>
+</head>
 
-    <body>
-        <div id="root"></div>
-        <div id="toasts"></div>
-    </body>
+<body>
+    <div id="root"></div>
+    <div id="toasts"></div>
+</body>
 
 </html>
