--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/img/icon.png">
-    <title>Учебный проект</title>
+    <title>EyeScreen</title>
 </head>
 
 <body>
